samples/_failures_safe/1761563022_faa3da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6eb161bf.c: In function ‘main’:
./samples/SAFE/__tmp_6eb161bf.c:146:12: error: expected expression at end of input
  146 |            (1.0 - (double)compressed.size / input_data.size) *
      |            ^
./samples/SAFE/__tmp_6eb161bf.c:146:12: error: expected declaration or statement at end of input
